# agent-claude-refactoring

./: .gitignore  AI_CONTRIBUTORS.md  CLAUDE.md  CLAUDE_AGENT_GUIDE.md  CONTRIBUTING.md  LICENSE  PROJECT_SUMMARY.md  README.md  SESSION_2025-10-04.md  pyproject.toml  setup.py  setup_project.sh
.github/workflows/: test.yml
config/: refactoring_agent.yaml
docs/: installation.md  usage.md
src/refactoring_agent/: __init__.py  analyzer.py  cli.py  issue_creator.py  monitor.py  planner.py  reporter.py  scanner.py
tests/: __init__.py  test_cli.py  test_scanner.py
